--- a/src/about.html
+++ b/src/about.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<!-- Важная мета-информация для корректного отображения на мобильных устройствах -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Мой первый проект</title>
-<!-- Подключение фавиконки -->
-<link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>О нас - Название вашего сайта</title>
+    <meta name="description" content="Краткое описание главной страницы вашего сайта">
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <a href="index.html">Логотип</a>
-        <rav>
-            <ul>
+        <!-- комментарий -->
+         <a href="index.html">Главная</a>
+         <ul>
             <li><a href="index.html">Главная страница</a></li>
-            <li></li><a href="about.html">О нас</a></li>
-            <li></li><a href="contacts.html">Контакты</a></li>
-            </ul>
-        </rav>
+            <li><a href="about.html">О нас</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+         </ul>
     </header>
 
+    <main>
+        <nav aria-label="Хлебные крошки">
+            <a href="index.html">Глваная</a> →
+            <span>О нас</span>
+        </nav>
+
+        <h1>О нашей компании</h1>
+        <section>
+            <h2>Наша история</h2>
+            <p>История нашей компании</p>
+        </section>
+
+        <section>
+            <h2>Наша команда</h2>
+            <p>Информация о нашей команде</p>
+        </section>
+
+    </main>
 
     <footer>
         <p>&copy; 2023 Название вашего сайта. Все права защищены.</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
 </body>
-</html>
