--- a/src/index.html
+++ b/src/index.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<!-- Важная мета-информация для корректного отображения на мобильных устройствах -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Мой первый проект</title>
-<!-- Подключение фавиконки -->
-<link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Главная - Название вашего сайта</title>
+    <meta name="description" content="Краткое описание главной страницы вашего сайта">
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
     <header>
-        <a href="index.html">Логотип</a>
-        <rav>
-            <ul>
+        <!-- комментарий -->
+         <a href="index.html">Главная</a>
+         <ul>
             <li><a href="index.html">Главная страница</a></li>
-            <li></li><a href="about.html">О нас</a></li>
-            <li></li><a href="contacts.html">Контакты</a></li>
-            </ul>
-        </rav>
+            <li><a href="about.html">О нас</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+         </ul>
     </header>
-    
     <main>
         <h1>Добро пожаловать на наш сайт!</h1>
+
         <section id="services">
-            <p>Информация о наших услугах</p>
+            <h2>Наши услуги</h2>
+            <p>Текст наших услуг</p>
             <a href="#contacts">Связаться с нами</a>
         </section>
 
+        <section id="portfolio">
+            <h2>Портфолио</h2>
+            <p>Тут будет список наших работ</p>
+        </section>
+
         <section id="contacts">
-            <p>Наши контакты: ...</p>
+            <h2>Связь с нами</h2>
+            <p>КОнтактная информация</p>
         </section>
     </main>
-
+    
     <footer>
         <p>&copy; 2023 Название вашего сайта. Все права защищены.</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
 </body>
-</html>
