--- a/src/about.html
+++ b/src/about.html
@@ -8,14 +8,15 @@
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <!-- комментарий -->
-         <a href="index.html">Главная</a>
-         <ul>
-            <li><a href="index.html">Главная страница</a></li>
-            <li><a href="about.html">О нас</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-         </ul>
+    <header class="site-header">
+        <a class="site-header__brand" href="/">Лого</a>
+        <nav class="site-nav" aria-label="Основная навигация">
+            <ul class="site-nav__list">
+                <li class="site-nav__item"><a class="site-nav__link" href="index.html">Главная</a></li>
+                <li class="site-nav__item"><a class="site-nav__link" href="about.html">О нас</a></li>
+                <li class="site-nav__item"><a class="site-nav__link site-nav__link--cta" href="#contacts">Связаться</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
