--- a/src/contacts.html
+++ b/src/contacts.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Контакты - Название вашего сайта</title>
-    <meta name="description" content="Краткое описание главной страницы вашего сайта">
-    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../static/style.css">
+<meta charset="UTF-8">
+<!-- Важная мета-информация для корректного отображения на мобильных устройствах -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Контакты</title>
+<!-- Подключение фавиконки -->
+<link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+<link rel="stylesheet" href="../static/styles.css">
 </head>
-<body>
-    <header>
-        <!-- комментарий -->
-         <a href="index.html">Главная</a>
-         <ul>
-            <li><a href="index.html">Главная страница</a></li>
-            <li><a href="about.html">О нас</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-         </ul>
+<body class="theme-dark">
+    <header class="site-header">
+        <a class="site-header__brand" href="/">Лого</a>
+        <nav class="site-nav" aria-label="Основная навигация">
+            <ul class="site-nav__list">
+                <li class="site-nav__item"><a class="site-nav__link" href="index.html">Главная</a></li>
+                <li class="site-nav__item"><a class="site-nav__link" href="about.html">О нас</a></li>
+                <li class="site-nav__item"><a class="site-nav__link site-nav__link--cta" href="#contacts">Связаться</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -28,7 +30,7 @@
         <h1>Контакты</h1>
         <section>
             <h2>Наша электронная почта</h2>
-            <p>ivanov@mail.ru</p>
+            <p>...</p>
         </section>
 
         <section>
@@ -40,10 +42,10 @@
             <h1>Форма обратной связи</h1>
 
             <label for="username">Ваше имя:</label>
-            <input type="text" id="username" name="username" placeholder="Ivan_Ivanov">
+            <input type="text" id="username" name="username" required>
 
-            <label for="password">Пароль:</label>
-            <input type="text" id="password" name="password">
+            <label for="phone">Ваш номер телефона:</label>
+            <input type="text" id="phone" name="phone" required>
 
             <label for="email">Ваш email:</label>
             <input type="text" id="email" name="email">
