--- a/src/index.html
+++ b/src/index.html
@@ -1,45 +1,79 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Главная - Название вашего сайта</title>
-    <meta name="description" content="Краткое описание главной страницы вашего сайта">
-    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../static/styles.css">
-</head>
-<body>
-    <header>
-        <!-- комментарий -->
-         <a href="index.html">Главная</a>
-         <ul>
-            <li><a href="index.html">Главная страница</a></li>
-            <li><a href="about.html">О нас</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-         </ul>
+    <img class="hero card__img" src="img/bird.jpg" alt="Птичка" width="640" height="360" loading="lazy" decoding="async">
+      <source src="video/teaser-1080.mp4" type="video/mp4">
+      <source src="video/teaser-720.webm" type="video/webm">
+      <track kind="captions" srclang="ru" src="video/captions-ru.vtt" label="Русские субтитры" default>
+    </video>  
+    <meta 
+      name="description"
+      content="Краткое описание главной страницы вашего сайта"
+    />
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+  </head>
+<body class="theme-dark">
+    <!-- Вставка с Rutube; замените XXXXXXXXXXXX на ID ролика -->
+    <div class="media">
+      <iframe src="https://rutube.ru/play/embed/597faa23bf06a1d6840b59b86d0fe2d5" title="Видео о проекте" allow="autoplay; encrypted-media; picture-in-picture; web-share" allowfullscreen loading="lazy"></iframe>
+    </div>
+    <!-- Вставка с VK Видео; проверьте, разрешён ли embed для ролика -->
+    <div class="media">
+      <iframe
+        src="https://vk.com/vkvideo?z=video-15722194_456292948%2Fedaaa2cb53c518de13%2Fpl_wall_-220754053"
+        title="Видео о проекте"
+        allow="autoplay; encrypted-media; picture-in-picture; web-share"
+        allowfullscreen loading="lazy"></iframe>
+    </div>
+    <!-- Шапка сайта -->
+    <header class="site-header">
+      <a class="site-header__brand" href="/">Лого</a>
+      <nav class="site-nav" aria-label="Основная навигация">
+        <ul class="site-nav__list">
+          <li class="site-nav__item">
+            <a class="site-nav__link" href="index.html">Главная</a>
+          </li>
+          <li class="site-nav__item">
+            <a class="site-nav__link" href="about.html">О нас</a>
+          </li>
+          <li class="site-nav__item">
+            <a class="site-nav__link site-nav__link--cta" href="#contacts"
+              >Связаться</a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
+    <!-- Уникальное основное содержимое страницы -->
     <main>
-        <h1>Добро пожаловать на наш сайт!</h1>
-
-        <section id="services">
-            <h2>Наши услуги</h2>
-            <p>Текст наших услуг</p>
-            <a href="#contacts">Связаться с нами</a>
-        </section>
-
-        <section id="portfolio">
-            <h2>Портфолио</h2>
-            <p>Тут будет список наших работ</p>
-        </section>
-
-        <section id="contacts">
-            <h2>Связь с нами</h2>
-            <p>КОнтактная информация</p>
-        </section>
+      <h1>Добро пожаловать на наш сайт!</h1>
+      <!-- Секция 1 с якорем -->
+      <section id="services">
+        <h2>Наши услуги</h2>
+        <p>Описание предоставляемых услуг...</p>
+        <a href="#contacts">Связаться с нами</a>
+        <!-- Якорная ссылка внутри страницы -->
+      </section>
+      <!-- Секция 2 с якорем -->
+      <section id="portfolio">
+        <h2>Портфолио</h2>
+        <p>Примеры наших работ...</p>
+      </section>
+      <!-- Секция 3 с якорем -->
+      <section id="contacts">
+        <h2>Контактная информация</h2>
+        <p>Наши контакты...</p>
+        <a href="contacts.html">Подробнее</a>
+        <!-- Ссылка на отдельную страницу -->
+      </section>
     </main>
-    
+    <!-- Подвал сайта -->
     <footer>
-        <p>&copy; 2023 Название вашего сайта. Все права защищены.</p>
-        <p>Телефон: +7 (123) 456-78-90</p>
+      <p>&copy; 2023 Название вашего сайта. Все права защищены.</p>
+      <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
-</body>
+  </body>
+</html>
